# urfu-kitchen-detection

./: README.md  cooking.ipynb  label_encoder.pkl  main.py  pyproject.toml  tfidf_vectorizer.pkl  urfu-kitchen-detection.ipynb
app/api/: kitchen_router.py
app/preprocessing/: ingredients.py
app/schemes/: kitchen_schemes.py
