[tool.poetry]
name = "urfu-kitchen-detection"
version = "0.1.0"
description = ""
authors = ["AlexSkvorz <alexskvorz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
